Remove some unnecessary underscores.

--- a/lobster/commands/data/category.html
+++ b/lobster/commands/data/category.html
@@ -236,8 +236,8 @@
                 {{ label_wrapper('good-exhaustion-hist.png', 'Time lost to exceeding allocated resources', class="good") }}
             </ul></div>
             <div><ul class="img-list">
-                {{ label_wrapper('good-runtime-hist.png', 'Time from wrapper_start to processing_end', class='good') }}
-                {{ label_wrapper('good-overhead-hist.png', 'Time from wrapper_start to begin processing the first event', class='good') }}
+                {{ label_wrapper('good-runtime-hist.png', 'Time from wrapper start to processing end', class='good') }}
+                {{ label_wrapper('good-overhead-hist.png', 'Time from wrapper start to begin processing the first event', class='good') }}
             </ul></div>
             <div class="good more"><ul class="img-list">
                 {{ label_wrapper('good-transfer-in-hist.png', 'Time to transfer input files', class='good') }}
@@ -283,8 +283,8 @@
                 {{ label_wrapper('merge-exhausted-hist.png', 'Time lost to exceeding allocated resources', class="merge") }}
             </ul></div>
             <div><ul class="img-list">
-                {{ label_wrapper('merge-runtime-hist.png', 'Time from wrapper_start to processing_end', class='merge') }}
-                {{ label_wrapper('merge-overhead-hist.png', 'Time from wrapper_start to begin processing the first event', class='merge') }}
+                {{ label_wrapper('merge-runtime-hist.png', 'Time from wrapper start to processing end', class='merge') }}
+                {{ label_wrapper('merge-overhead-hist.png', 'Time from wrapper start to begin processing the first event', class='merge') }}
             </ul></div>
             <div class="merge more"><ul class="img-list">
                 {{ label_wrapper('merge-transfer-in-hist.png', 'Time to transfer input files', class='merge') }}
