--- a/lobster/commands/data/category.html
+++ b/lobster/commands/data/category.html
@@ -123,14 +123,14 @@
         <h1 id="navwflow">Workflow Summary</h1>
         <table class="fancy">
             <tr>
-                <th>Workflow</th>
-                <th>Events</th>
-                <th>read</th>
-                <th>written</th>
-                <th>Units</th>
-                <th>unmasked</th>
-                <th>written</th>
-                <th>merged</th>
+                <th>workflow</th>
+		<th>total<br>events</th>
+		<th>read<br>events</th>
+		<th>written<br>events</th>
+		<th>total<br>units</th>
+		<th>unmasked<br>units</th>
+		<th>written<br>units</th>
+		<th>merged<br>units</th>
 		<th>
 		    <div class="tooltip">upstream<br>missing
 		        <span class="tooltiptext">
@@ -149,7 +149,7 @@
 	            </div>
 	        </th>
                 <th>
-		    <div class="tooltip">failed
+		    <div class="tooltip">failed<br>units
 		        <span class="tooltiptext">
 			    Units for which the executable has not exited successfully more than
 			    <span class="code">threshold_for_failure</span>.<br><br>
@@ -166,7 +166,7 @@
 	            </div>
 	        </th>
                 <th>
-		    <div class="tooltip">skipped
+		    <div class="tooltip">skipped<br>units
 		        <span class="tooltiptext">
 			    Units for which accessing the input file has failed more than
 			    <span class="code">threshold_for_skipping</span>.<br><br>
@@ -182,8 +182,8 @@
 		        </span>
 	            </div>
 	        </th>
-                <th>Progress</th>
-                <th>Merged</th>
+                <th>progress</th>
+                <th>merged</th>
                 {% if jsons|length > 0 %}<th>JSON</th>{% endif %}
             </tr>
             {% for row in summary %}
