Change stuck upstream -> stuck

--- a/lobster/commands/data/category.html
+++ b/lobster/commands/data/category.html
@@ -132,7 +132,7 @@
 		<th>written<br>units</th>
 		<th>merged<br>units</th>
 		<th>
-		    <div class="tooltip">stuck<br>upstream
+		    <div class="tooltip">stuck
 		        <span class="tooltiptext">
 			    Units which were failed or skipped in upstream workflows, and would need to be completed
 			    before the dependent units in this workflow can be processed.<br><br>
