--- a/lobster/commands/data/category.html
+++ b/lobster/commands/data/category.html
@@ -122,15 +122,28 @@
     <body>
         <h1 id="navwflow">Workflow Summary</h1>
         <table class="fancy">
+	    <col>
+	    <colgroup span="1"></colgroup>
+	    <colgroup span="3"></colgroup>
+	    <colgroup span="7"></colgroup>
+	    <colgroup span="1"></colgroup>
+	    <colgroup span="1"></colgroup>
             <tr>
-                <th>workflow</th>
-		<th>total<br>events</th>
-		<th>read<br>events</th>
-		<th>written<br>events</th>
-		<th>total<br>units</th>
-		<th>unmasked<br>units</th>
-		<th>written<br>units</th>
-		<th>merged<br>units</th>
+	        <th colspan="1" scope="colgroup" class="coldivider"></th>
+	        <th colspan="3" scope="colgroup" class="topcolgroup">Events</th>
+	        <th colspan="7" scope="colgroup" class="topcolgroup">Units</th>
+	        <th colspan="2" scope="colgroup"></th>
+		{% if jsons|length > 0 %}<th colspan="1" scope="colgroup"></th>{% endif %}
+            </tr>
+	    <tr>
+		<th class="coldivider">category</th>
+	        <th>total</th>
+	        <th>read</th>
+	        <th class="coldivider">written</th>
+		<th>total</th>
+		<th>unmasked</th>
+		<th>written</th>
+		<th>merged</th>
 		<th>
 		    <div class="tooltip">stuck
 		        <span class="tooltiptext">
@@ -149,7 +162,7 @@
 	            </div>
 	        </th>
                 <th>
-		    <div class="tooltip">failed<br>units
+		    <div class="tooltip">failed
 		        <span class="tooltiptext">
 			    Units for which the executable has not exited successfully more than
 			    <span class="code">threshold_for_failure</span>.<br><br>
@@ -165,8 +178,8 @@
 		        </span>
 	            </div>
 	        </th>
-                <th>
-		    <div class="tooltip">skipped<br>units
+                <th class=coldivider>
+		    <div class="tooltip">skipped
 		        <span class="tooltiptext">
 			    Units for which accessing the input file has failed more than
 			    <span class="code">threshold_for_skipping</span>.<br><br>
@@ -182,8 +195,8 @@
 		        </span>
 	            </div>
 	        </th>
-                <th>progress</th>
-                <th>merged</th>
+                <th>Progress</th>
+                <th>Merged</th>
                 {% if jsons|length > 0 %}<th>JSON</th>{% endif %}
             </tr>
             {% for row in summary %}
