--- a/lobster/commands/data/category.html
+++ b/lobster/commands/data/category.html
@@ -147,13 +147,14 @@
 		<th>
 		    <div class="tooltip">stuck
 		        <span class="tooltiptext">
-			    Units which were failed or skipped in upstream workflows, and would need to be completed
-			    before the dependent units in this workflow can be processed.<br><br>
+			    Units which cannot be attempted because their input is a unit in a parent workflow that failed
+			    or was skipped.
 
-			    If you want to increase skipping/failure thresholds so that these units are attempted
+			    If you want to increase skipping/failure thresholds so that the parent units are attempted
 			    again, run <span class="code"><br>lobster configure /my/working/directory<br></span> and increase
 			    <span class="code">threshold_for_failure</span> and/or <span class="code">threshold_for_skipping</span>
-			    in the <span class="code">lobster.core.config.AdvancedOptions</span> section. For more information
+			    in the <span class="code">lobster.core.config.AdvancedOptions</span> section. If the parent unit
+			    finishes successfully, the stuck units will automatically be attempted. For more information
 			    see the documentation on
 			    <a href=http://lobster.readthedocs.io/en/latest/run.html#changing-configuration-options>updating</a>
 			    your configuration after the start of a run, and advanced configuration
