--- a/lobster/commands/data/category.html
+++ b/lobster/commands/data/category.html
@@ -158,7 +158,7 @@
 			    or was skipped.
 
 			    If you want to increase skipping/failure thresholds so that the parent units are attempted
-			    again, run <span class="code"><br>lobster configure /my/working/directory<br></span> and increase
+			    again, run <span class="code">lobster configure /my/working/directory</span> and increase
 			    <span class="code">threshold_for_failure</span> and/or <span class="code">threshold_for_skipping</span>
 			    in the <span class="code">lobster.core.config.AdvancedOptions</span> section. If the parent unit
 			    finishes successfully, the stuck units will automatically be attempted. For more information
@@ -208,7 +208,7 @@
 		        <span class="tooltiptext">
 			    Units which are available for processing but haven't been attempted yet:<br><br>
 
-			    <span class="code">left = unmasked - running - written - failed - skipped - stuck</span>
+			    left = unmasked - running - written - failed - skipped - stuck
 		        </span>
 	            </div>
 		</th>
